Implementation of /PART command for MUCs

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=604348