libempathy-gtk/empathy-chat.h
@@ -83,6 +83,9 @@ void               empathy_chat_correct_word         (EmpathyChat   *chat,
 						      GtkTextIter   *start,
 						      GtkTextIter   *end,
 						      const gchar   *new_word);
+void               empathy_chat_join_muc             (EmpathyChat   *chat,
+						      const gchar   *room);
+void               empathy_chat_leave_chat           (EmpathyChat *chat);
 gboolean           empathy_chat_is_room              (EmpathyChat   *chat);
 void               empathy_chat_set_show_contacts    (EmpathyChat *chat,
                                                       gboolean     show);
